--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,37 @@
     font-family: sans-serif;
 }
 
-.grid {
+.flex-overview {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.flex-overview__card {
+    width: 30vw;
+    background: #f1f1f1;
+    height: 500px;
+    position: relative;
+}
+
+.flex-overview__card-img {
+    height: auto;
+}
+
+.flex-overview__card-title {
+    height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background: rgba(0,0,0,0.5);
+    color: white;
+    width: 100%;
+    backdrop-filter: blur(5px);
+    bottom: 175px;
+}
+
+.flex-overview__card img {
+    width: 100%;
 }
