--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,13 +9,20 @@
 </head>
 <body>
     <h1>Movie Magic</h1>
-    <% data.results[0].title %>
-    <% data.results.forEach(element => { %>
-        <div class="grid">
-            <h3>
-                <%= element.title  %> 
-            </h3>
-        </div>
-    <% }) %>
+    <div class="flex-overview">
+        <% data.results[0].title %>
+        <% data.results.forEach(element => { %>
+            <div class="flex-overview__card">
+                <div class="flex-overview__card-img">
+                    <img src=<%=`https://image.tmdb.org/t/p/original/${element.backdrop_path}` %> />
+                    <div class="flex-overview__card-title">
+                        <h3>
+                            <%= element.title  %> 
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        <% }) %>
+    </div>
 </body>
 </html>
